<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/shop_app"
        android:textAllCaps="true"
        android:textColor="#0925A7"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_coffee"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/coffee" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:ems="12"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="#0A750C"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_qtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/qtd"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="7"
        android:fontFamily="serif"
        android:padding="16dp"
        android:text="@string/order"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:text="@string/thanks_note"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>